--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       , "url": "http://www.apache.org/licenses/LICENSE-2.0"
     }
   ]
-  , "devDependencies": {
+  , "dependencies": {
       "uglify-js": "1.2.6"
     , "jshint": "0.6.1"
     , "recess": "1.0.3"
